--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "dependencies": {
     "axios": "^1.6.7",
     "core-js": "^3.8.3",
+    "primevue": "^3.49.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
