--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "core-js": "^3.8.3",
+    "html2pdf.js": "^0.10.1",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5"
   },
