--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "core-js": "^3.8.3",
+    "html2pdf.js": "^0.10.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.49.1",
     "vue": "^3.2.13",
